Implement Databricks MCP server with configuration, authentication, and query handling
- Update README with quick start and setup instructions
- Add example configuration file with environment variable references
- Create project metadata in pyproject.toml
- Implement OAuth token provider for authentication
- Develop Databricks SQL client for executing queries
- Define configuration and error handling classes
- Establish guardrails for query execution and identifier sanitization
- Set up logging utilities for observability
- Build main server application with async query tools
- Add unit tests for configuration loading and guardrail functions

--- a/config.example.yml
+++ b/config.example.yml
@@ -1,13 +1,13 @@
 # Example MCP server configuration for Databricks (OAuth-only shared service principal)
 warehouse:
-  host: https://<workspace-hostname>
-  http_path: /sql/1.0/warehouses/<warehouse-http-path>
-  warehouse_id: <warehouse-id>
+  host: ${DATABRICKS_HOST}
+  http_path: ${DATABRICKS_HTTP_PATH}
+  warehouse_id: ${DATABRICKS_WAREHOUSE_ID}
 auth:
   oauth:
     client_id: ${DATABRICKS_CLIENT_ID}
     client_secret: ${DATABRICKS_CLIENT_SECRET}
-    token_url: https://<workspace-hostname>/oidc/v1/token
+    token_url: ${DATABRICKS_TOKEN_URL}
 scopes:
   catalogs:
     - main
