Refactor configuration and documentation for Databricks MCP server
- Update README and REQUIREMENTS to include new metadata and summaries.
- Modify example configuration to reflect new catalog and schema structure.
- Adjust client methods to support catalog-based schema validation.
- Enhance config loading to handle new catalog schema mappings.
- Update guardrails to validate schemas against catalogs.
- Revise tests to align with updated configuration structure.

--- a/config.example.yml
+++ b/config.example.yml
@@ -10,9 +10,9 @@ auth:
     token_url: ${DATABRICKS_TOKEN_URL}
 scopes:
   catalogs:
-    - main
-  schemas:
-    - default
+    main:
+      schemas:
+        - default
 limits:
   # Use -1 to represent no limit; otherwise set explicit caps.
   max_rows: 10000
