Refactor Databricks MCP for Lead Generation and Audience Sizing
- Updated README.md to reflect new focus on lead generation and audience sizing.
- Revised requirements in REQUIREMENTS.md to align with the new functionality.
- Modified example configuration in config.example.yml to support lead generation features.
- Changed project description in pyproject.toml to emphasize lead generation capabilities.
- Refactored client methods in src/databricks_mcp/client.py to replace raw data retrieval with approximate counting and aggregation metrics.
- Removed jobs.py as job execution features are no longer supported.
- Updated server.py to remove job-related functionality and focus on audience sizing tools.
- Enhanced documentation and comments throughout the codebase to clarify new features and usage.

--- a/config.example.yml
+++ b/config.example.yml
@@ -1,4 +1,11 @@
-# Example MCP server configuration for Databricks (OAuth-only shared service principal)
+# Example MCP server configuration for Databricks Lead Generation
+# This configuration enables audience sizing and lead generation via aggregated metrics only.
+# No raw data is returned; all results are aggregated values (COUNT, SUM, AVG, MIN, MAX).
+#
+# Available tools:
+# - Metadata: list_catalogs, list_schemas, list_tables, table_metadata, partition_info
+# - Aggregation: approx_count (row count), aggregate_metric (COUNT, SUM, AVG, MIN, MAX)
+#
 warehouse:
   host: ${DATABRICKS_HOST}
   http_path: ${DATABRICKS_HTTP_PATH}
