Refactor code structure for improved readability and maintainability

--- a/app.yml
+++ b/app.yml
@@ -1,10 +1,11 @@
 # Databricks App configuration
 # This file configures how the Databricks MCP server runs as a Databricks App
 
-command:
-  - python
-  - -m
-  - databricks_mcp.server
+command: [
+  'uv',
+  'run',
+  'custom-server'
+]
 
 env:
   # Configuration file path (required)
