Refactor MCP server structure: consolidate entry point, remove unused files, and enhance tool registration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dev = [
 ]
 
 [project.scripts]
-custom-server = "databricks_mcp.server.main:main"
+custom-server = "databricks_mcp.server:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
